[package]
name = "yew-bistro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
lazy_static = "1.4.0"
log = "0.4.17"
maplit = "1.0.2"
num-bigint = "0.4.3"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
yew = { version = "0.20.0", features = ["csr"] }
